corrected colors, contrast

--- a/Components/Chips/chips.css
+++ b/Components/Chips/chips.css
@@ -22,6 +22,7 @@
     border: var(--chip-border);
     border-radius: var(--chip-border-radius);
     padding: 0.2em 0.5em;
+    color: white;
 
     /* flex - properties */
     display: flex;
